# mentee

./: .gitignore  .slugignore  Procfile  README.md  df  docker-compose.yml  heroku-logs-prod.txt  heroku-logs.txt  package.json  pyproject.toml  pyproject.toml000  requirements.txt  start.sh  static.json  vercel.sh
.circleci/: config.yml
.github/: issue_template.md  pull_request_template.md
.github/workflows/: cypress-tests.yml  deploy.yml  dev-deploy.yml  main.yml  prod-deploy.yml  pytest-tests.yml
backend/: .dockerignore  .env.example  .gitignore  .gitignore.secure  Dockerfile  Makefile  README.md  ar_None  check_events_api.py  comprehensive_security_report.json  dependency_audit_report.json  dependency_management_summary.json  es-US_None  explore_mongo.py  fa-AF_None  fix_events.py  flask_fix_events.py  index.py  logging_security_audit_report.json  manage.py  oauth.json  production_config.py  pt-BR_None  pyproject.toml  requirements-dev.txt  requirements-override.txt  requirements.txt  requirements_backup_20250714_220130.txt  scripts.py  security_audit.py  security_audit_report.json  socketio_client.html  token.json  user_options.json  verify_security.py
backend/api/: __init__.py  core.py
backend/api/models/: Admin.py  Announcement.py  AppointmentRequest.py  Availability.py  CommunityLibrary.py  Countries.py  DirectMessage.py  Education.py  Event.py  GroupMessage.py  Guest.py  Hub.py  Image.py  Languages.py  MenteeApplication.py  MenteeProfile.py  MentorApplication.py  MentorProfile.py  Message.py  Moderator.py  NewMentorApplication.py  Notifications.py  PartnerApplication.py  PartnerGroupMessage.py  PartnerProfile.py  Person.py  SignOrigin.py  SignedDocs.py  Specializations.py  Support.py  Training.py  Translations.py  User.py  Users.py  VerifiedEmail.py  Video.py  __init__.py
backend/api/models/model_class_possibilities/: Model_id_recursion.py
backend/api/utils/: certificate_manager.py  cloud_secrets.py  constants.py  csp_manager.py  csrf_protection.py  data_protection.py  data_protection_integration.py  data_storage_encryption.py  firebase.py  flask_imgur.py  google_storage.py  google_translate.py  input_validation.py  jaas_jwt_builder.py  profile_parse.py  rate_limiting.py  request_utils.py  require_auth.py  secret_manager.py  secure_access_control.py  secure_comm_integration.py  secure_communication.py  secure_config.py  secure_download.py  secure_env.py  secure_file_handler.py  secure_logging.py  secure_logging_monitor.py  secure_queries.py  security_config.py  security_integration.py  security_linter.py  security_middleware.py  security_scanner.py  simple_secure_logging.py  standalone_security.py  token_security.py  translate.py  validation_schemas.py  web_security.py  (+3 more)
backend/api/views/: admin.py  adminNotifications.py  admin_notifications.py  announcement.py  app_blueprint.py  apply.py  appointment.py  auth.py  auth_management.py  availability.py  download.py  events.py  generate_url.py  main.py  masters.py  meeting.py  mentee.py  messages.py  notifications.py  training.py  translation.py  verify.py
backend/scripts/: emails.py
backend/tests/: .env.example  conftest.py  test_admin.py  test_apply.py  test_appointments.py  test_auth.py  test_basic.py  test_events.py  test_explore.py  test_messages.py  test_private.py  test_profile.py  test_training.py  test_verify_user.py  test_videos.py
backend/tests/utils/: consts.json  login_utils.py  profile_utils.py
docs/: AnotherReadMe.md  README.md  _coverpage.md  _sidebar.md  index.html
docs/backend/: file_structure.md  setup.md
docs/frontend/: setup.md
frontend/: .dockerignore  .gitignore  Dockerfile  package.json  static.json  vercel.sh
frontend/public/: index.html  manifest.json
frontend/src/: exmaple.md  index.js  index.scss  router.js
infra-authentication-server/: .gitignore  config.yml  now.json  package.json
infra-authentication-server/src/: index.js
tests/: README.md  cypress.config.js  cypress.env.json
(+254 files in other folders)
