[tool.poetry]
name = "backend"
packages = [
    { include = "api" },
]
version = "0.1.0"
description = ""
authors = ["kenetec <klhester3@gmail.com>"]

[tool.poetry.scripts]
start = "scripts:runserver"
start-prod = "scripts:runprod"
startworker = "scripts:runworker"
format = "scripts:format"

[tool.poetry.dependencies]
python = "^3.8"
flask-mongoengine = ">=0.9.5"
gunicorn = ">=19.7.1"
mongoengine = ">=0.18.2"
Flask-Cors = ">=3.0.6"
Flask-Migrate = "==2.1.1"
Flask-Script = "==2.0.6"
Flask = ">=1.0.2"
python-dotenv = "^0.15.0"
WTForms-JSON = "^0.3.3"
sendgrid = "^6.6.0"
pymongo = "^3.11.3"
pandas = "^1.2.2"
XlsxWriter = "^1.3.7"
firebase-admin = "^4.5.2"
requests = "^2.25.1"
Pyrebase4 = "^4.4.3"
twilio = "^6.53.0"
Flask-SocketIO = "^5.1.1"
eventlet = "^0.32.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^6.2.2"
pylint = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
