[tool.poetry]
name = "backend"
packages = [
    { include = "api" },
]
version = "0.1.0"
description = ""
authors = ["kenetec <klhester3@gmail.com>"]

[tool.poetry.scripts]
start = "scripts:runserver"
format = "scripts:format"

[tool.poetry.dependencies]
python = "^3.8"
flask-mongoengine = "1.0.0"
gunicorn = "20.1.0"
mongoengine = "0.26.0"
Flask-Cors = "3.0.10"
Flask-Migrate = "4.0.4"
Flask-Script = "2.0.6"
Flask = "2.2.3"
python-dotenv = "1.0.0"
WTForms-JSON = "0.3.5"
sendgrid = "6.9.7"
pymongo = "4.2.0"
pandas = "1.5.3"
XlsxWriter = "3.0.8"
firebase-admin = "6.1.0"
requests = "2.28.2"
Pyrebase4 = "4.6.0"
twilio = "7.16.4"
Flask-SocketIO = "5.3.2"
eventlet = "0.30.2"
gevent-websocket = "0.10.1"
alembic = "1.9.4"
bidict = "0.22.1"
cachecontrol = "0.12.11"
cachetools = "4.2.4"
certifi = "2022.12.7"
cffi = "1.15.1"
chardet = "4.0.0"
charset-normalizer = "3.0.1"
click = "8.1.3"
colorama = "0.4.6"
cryptography = "39.0.2"
deprecated = "1.2.13"
dill = "0.2.9"
dnspython = "1.16.0"
email-validator = "1.3.1"
flask-sqlalchemy = "3.0.3"
flask-wtf = "1.1.1"
future = "0.16.0"
gax-google-logging-v2 = "0.8.3"
gax-google-pubsub-v1 = "0.8.3"
gcloud = "0.18.3"
gevent = "22.10.2"
google-api-core = "2.11.0"
google-api-python-client = "2.80.0"
google-auth = "2.16.2"
google-auth-httplib2 = "0.1.0"
google-cloud-core = "2.3.2"
google-cloud-firestore = "2.10.0"
google-cloud-storage = "2.7.0"
google-crc32c = "1.5.0"
google-gax = "0.12.5"
google-resumable-media = "2.4.1"
googleapis-common-protos = "1.58.0"
greenlet = "2.0.2"
grpc-google-logging-v2 = "0.8.1"
grpc-google-pubsub-v1 = "0.8.1"
grpcio = "1.51.3"
grpcio-status = "1.51.3"
h11 = "0.14.0"
httplib2 = "0.21.0"
idna = "2.10"
importlib-metadata = "6.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jwcrypto = "1.4.2"
mako = "1.2.4"
markupsafe = "2.1.2"
msgpack = "1.0.4"
numpy = "1.24.2"
oauth2client = "4.1.3"
packaging = "23.0"
ply = "3.8"
proto-plus = "1.22.2"
protobuf = "4.22.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.21"
pycryptodome = "3.17"
pyjwt = "2.6.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
python-editor = "1.0.4"
python-engineio = "4.3.4"
python-http-client = "3.3.7"
python-jwt = "4.0.0"
python-socketio = "5.7.2"
pytz = "2022.7.1"
requests-toolbelt = "0.10.1"
rsa = "4.9"
simple-websocket = "0.9.0"
six = "1.16.0"
sqlalchemy = "2.0.4"
starkbank-ecdsa = "2.2.0"
typing-extensions = "4.5.0"
uritemplate = "4.1.1"
urllib3 = "1.26.14"
werkzeug = "2.2.3"
wrapt = "1.15.0"
wsproto = "1.2.0"
wtforms = "3.0.1"
zipp = "3.15.0"
zope-event = "4.6"
zope-interface = "5.5.2"
google-cloud-translate = "^3.11.1"
pypdf2 = "^3.0.1"
pillow = "^10.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pytest = "^6.2.2"
pylint = "^2.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
